fix code wrap

--- a/src/components/Post/Blockquote/blockquote.module.css
+++ b/src/components/Post/Blockquote/blockquote.module.css
@@ -17,4 +17,5 @@
 .bq code {
   background: none;
   color: var(--theme-text);
+  word-break: break-word;
 }
