--- a/src/components/Post/Li/li.module.css
+++ b/src/components/Post/Li/li.module.css
@@ -16,4 +16,5 @@
   border-radius: 5px;
   opacity: 0.7;
   font-size: 1rem;
+  word-break: break-word;
 }
