--- a/src/components/Post/Paragraph/p.module.css
+++ b/src/components/Post/Paragraph/p.module.css
@@ -12,6 +12,7 @@
   border-radius: 5px;
   opacity: 0.7;
   font-size: 1rem;
+  word-break: break-word;
 }
 
 :global(body.dark) .p code {
